k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-tactics
  namespace: chess-tactics
  labels:
    app: chess-tactics
spec:
  type: ClusterIP
  selector:
    app: chess-tactics
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
